# video-clone-backend

./: .gitignore  CLAUDE.md  alembic.ini  main.py  pyproject.toml  run_server.sh
alembic/: env.py  env_config.py
alembic/versions/: 001_add_users_table.py  002_add_core_models.py  003_add_model_data_key.py  004_add_avatar_jobs_table.py  005_add_local_video_path.py  006_add_thumbnail_key.py  007_add_visibility_to_voice_models.py  008_add_execution_mode_to_video_models.py  009_add_progress_tracking_to_video_models.py  010_add_bypass_model_limit_to_users.py  010_add_processing_stage_to_generated_videos.py  011_add_pid_to_avatar_jobs.py  012_rename_model_data_url_to_reference_id.py  013_add_processing_stage_to_generated_videos.py  014_add_output_file_to_generated_videos.py  015_add_payment_method_cache_to_subscription.py  016_add_new_subscription_plans.py
app/: config.py
app/db/: __init__.py  database.py
app/middleware/: __init__.py  performance.py
app/models/: __init__.py  avatar_job.py  deleted_account_record.py  generated_video.py  payment_history.py  subscription.py  training_usage_record.py  usage_record.py  user.py  (+4 more)
docs/: API.md  API_SPECIFICATION.md  BILLING_API.md  EC2_DEPLOYMENT.md  LIVETALKING_INTEGRATION.md  NEW_PLANS.md  avatar-streaming.md  cli_operations.md  direct-video-upload.md  direct-voice-upload.md  livetalking_api_operations.md
scripts/: CHECK_STATUS_COMMANDS.md  backfill_thumbnails.py  check_status.py  genavatar.py  generate_test_token.py  process_avatar_jobs.py  recover_avatars.py  run_avatar.py  run_video.py  test_runpod_api.py
(+66 files in other folders)
